# firefly

./: .gitmodules  CMakeLists.txt  FireflyConfig.cmake.in  README.md  compile_commands.json  fireflyConfig.cmake.in
include/: pch.hpp
include/firefly/: clock-sync.hpp  core.hpp  log-color.hpp  log-entry.hpp  log-factory.h  log-levels.hpp  log-registry.hpp  log.h  log.hpp  logger.h  logger.hpp  sinks.hpp  time.hpp
include/firefly/common/: clock-sync.h
include/firefly/log-levels/: i-log-level.hpp  log-level-debug.hpp  log-level-error.hpp  log-level-fatal.hpp  log-level-info.hpp  log-level-trace.hpp  log-level-warning.hpp  log-levels.hpp
include/firefly/sinks/: csv-sink.hpp  i-sink.hpp  json-sink.hpp  ndjson-sink.hpp  plain-text-sink.hpp
include/pch/: log-pch.h
src/: log-factory.cpp  log-registry.cpp  log.cpp  logger.cpp
src/sinks/: csv-sink.cpp  json-payload.hpp  json-sink.cpp  ndjson-sink.cpp  plain-text-sink.cpp
test/: CMakeLists.txt  test_main.cpp
